--- a/SDA/frontend/src/index.css
+++ b/SDA/frontend/src/index.css
@@ -12,7 +12,8 @@ html,
 body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   scroll-behavior: smooth;
   /* font-family: 'Poppins', sans-serif; */
 }
@@ -20,7 +21,8 @@ body {
 #root {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .message-box {
   scroll-behavior: smooth;
